<resources>
    <string name="app_name">PlongISEP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nom utilisateur</string>
    <string name="nav_header_subtitle">utilisateur@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_club">Ajouter un nouveau club</string>
    <string name="add_site">Ajouter un nouveau site</string>
    <string name="recherche">RechercheS</string>
    <string name="nom_du_site">Nom du site</string>
    <string name="description">Description</string>
    <string name="exploration">Exploration</string>
    <string name="enseignement">Enseignement</string>
    <string name="epave">Epave</string>
    <string name="valider">Valider</string>
    <string name="nuit">Nuit</string>
    <string name="localisation">Localisation</string>
    <string name="notez_la_flore">Notez la flore</string>
    <string name="notez_la_faune">Notez la faune</string>
    <string name="d_part_en_bateau">Départ en bateau</string>
    <string name="d_part_du_bord">Départ du bord</string>
    <string name="connection_succeed">Authentification Réussi</string>
    <string name="error_authentication_canceled">Authentification canceled</string>
    <string name="error_no_internet">No internet</string>
    <string name="error_unknown_error">Unknown error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="check_box_is_mentor">Etes-vous un proprietaire ?</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>
    <string name="inscription">Inscription</string>
</resources>
