<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentAddSite">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/add_site"
            android:textSize="20sp"
            android:id="@+id/addsitetitle"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/ratingBarfaune" app:layout_constraintHorizontal_bias="0.456" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/epave"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/ratingBarflore" app:layout_constraintHorizontal_bias="0.456" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <EditText
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nom_du_site"
            android:textAlignment="center"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/Name" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="153dp" app:layout_constraintBottom_toBottomOf="@+id/localisationsite"
            android:layout_marginBottom="153dp" tools:ignore="Autofill"/>
    <EditText
            android:layout_width="333dp"
            android:layout_height="103dp"
            android:inputType="textPersonName"
            android:hint="@string/description"
            android:textAlignment="center"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/description"
            app:layout_constraintTop_toTopOf="@+id/Name" android:layout_marginTop="38dp"
            app:layout_constraintBottom_toBottomOf="@+id/localisationsite" android:layout_marginBottom="31dp"
            tools:ignore="Autofill"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal" app:layout_constraintHorizontal_bias="0.496" android:id="@+id/radioGroup"
            app:layout_constraintBottom_toTopOf="@+id/epave">
        <CheckBox
                android:text="@string/d_part_du_bord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/departbord" android:layout_weight="1"/>
        <CheckBox
                android:text="@string/d_part_en_bateau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/departbateau" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/notez_la_faune"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView4" app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintBottom_toTopOf="@+id/ratingBarfaune"/>
    <TextView
            android:text="@string/notez_la_flore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView5" app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintTop_toBottomOf="@+id/ratingBarfaune"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.454"
            android:id="@+id/radioGroup2">
        <CheckBox
                android:text="@string/exploration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/exploration" android:layout_weight="1"/>
        <CheckBox
                android:text="@string/enseignement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/enseignement" android:layout_weight="1"/>
    </RadioGroup>
    <CheckBox
            android:text="@string/epave"
            android:layout_width="87dp"
            android:layout_height="39dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/epave" app:layout_constraintVertical_bias="0.598"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            android:layout_marginStart="44dp"/>
    <CheckBox
            android:text="@string/nuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/nuit" app:layout_constraintVertical_bias="0.59"
            android:layout_marginStart="24dp" app:layout_constraintStart_toEndOf="@+id/epave"/>
    <Button
            android:text="@string/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/validersite" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="38dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/localisation"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/localisationsite" android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup2" tools:ignore="Autofill,TextFields"/>


</androidx.constraintlayout.widget.ConstraintLayout>